--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
   "author": "Nicolas Polhamus",
   "license": "MIT",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nicpolhamus/tui-game.git"
+  },
+  "scripts": { 
+    "start": "webpack",
+    "watch": "yarn start -w",
+    "dev": "nodemon ./build/app.js"
+  },
   "dependencies": {
     "neo-blessed": "^0.2.0",
     "react": "^17.0.2",
@@ -14,6 +23,8 @@
   "devDependencies": {
     "@types/blessed": "^0.1.19",
     "@types/react-blessed": "^0.7.0",
+    "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "webpack": "^5.69.1",
