--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/nicpolhamus/tui-game.git"
   },
-  "scripts": { 
+  "scripts": {
     "start": "webpack",
     "watch": "yarn start -w",
     "dev": "nodemon ./build/app.js"
@@ -18,11 +18,13 @@
   "dependencies": {
     "neo-blessed": "^0.2.0",
     "react": "^17.0.2",
-    "react-blessed": "^0.7.2"
+    "react-blessed": "^0.7.2",
+    "react-router": "^6.2.1"
   },
   "devDependencies": {
     "@types/blessed": "^0.1.19",
     "@types/react-blessed": "^0.7.0",
+    "@types/react-router": "^5.1.18",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^9.2.6",
