--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "dev": "node ./build/app.js"
   },
   "dependencies": {
+    "immer": "^9.0.12",
     "neo-blessed": "^0.2.0",
     "react": "^17.0.2",
     "react-blessed": "^0.7.2",
-    "react-router": "^6.2.1"
+    "react-router": "^6.2.1",
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
     "@types/blessed": "^0.1.19",
